@@ -55,7 +55,7 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
       file(checkstyleConfig),
       file(checkstyleIdeFragment),
       file(checkstylePluginConfigTemplate)
-    )
+    ).withPathSensitivity(PathSensitivity.RELATIVE)
     outputs.files(
       file(checkstyleIdeConfig),
       file(checkstylePluginConfig)
@@ -218,7 +218,6 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
           defaults(JUnit) {
             vmParameters = [
               '-ea',
-              '-Djava.security.manager=allow',
               '-Djava.locale.providers=CLDR',
               '-Dtests.testfeatures.enabled=true',
               '-Des.nativelibs.path="' + testLibraryPath + '"',
