@@ -16,30 +16,16 @@ ext {
   javaMainClass = "org.elasticsearch.entitlement.tools.jdkapi.JdkApiExtractor"
 }
 
+def addIncubatorModules = {
+  file("${buildParams.runtimeJavaHome.get()}/jmods")
+    .listFiles()
+    .findAll { it.name.endsWith('.jmod') && it.name.contains('.incubator.') }
+    .collectMany { ['--add-modules', it.name[0..-6]] }
+}
+
 application {
   mainClass.set(javaMainClass)
-  applicationDefaultJvmArgs = [
-    '--add-exports', 'java.base/sun.security.util=ALL-UNNAMED',
-    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-    '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-    '--add-opens', 'java.base/java.net.spi=ALL-UNNAMED',
-    '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
-    '--add-opens', 'java.base/javax.crypto=ALL-UNNAMED',
-    '--add-opens', 'java.base/javax.security.auth=ALL-UNNAMED',
-    '--add-opens', 'java.base/jdk.internal.logger=ALL-UNNAMED',
-    '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
-    '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
-    '--add-opens', 'java.logging/java.util.logging=ALL-UNNAMED',
-    '--add-opens', 'java.logging/sun.util.logging.internal=ALL-UNNAMED',
-    '--add-opens', 'java.naming/javax.naming.ldap.spi=ALL-UNNAMED',
-    '--add-opens', 'java.rmi/sun.rmi.runtime=ALL-UNNAMED',
-    '--add-opens', 'jdk.dynalink/jdk.dynalink=ALL-UNNAMED',
-    '--add-opens', 'jdk.dynalink/jdk.dynalink.linker=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
-    '--add-opens', 'java.sql.rowset/javax.sql.rowset.spi=ALL-UNNAMED',
-    '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
-    '--add-opens', 'java.xml.crypto/com.sun.org.apache.xml.internal.security.utils=ALL-UNNAMED'
-  ]
+  applicationDefaultJvmArgs = addIncubatorModules()
 }
 
 tasks.named("run").configure {
@@ -51,9 +37,9 @@ repositories {
 }
 
 dependencies {
-  compileOnly(project(':libs:core'))
-  implementation 'org.ow2.asm:asm:9.8'
-  implementation 'org.ow2.asm:asm-util:9.8'
+  implementation(project(':libs:core'))
+  implementation 'org.ow2.asm:asm:9.9'
+  implementation 'org.ow2.asm:asm-util:9.9'
   implementation(project(':libs:entitlement:tools:common'))
 }
 
